Added beta dashboard

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="LightmineApp">
+<html ng-app="trackerApp">
 <head>
 	<title>OpsWay CRM</title>
 	<meta charset="utf-8" />
@@ -36,6 +36,10 @@
 							</li>
 						</ul>
 					</li>
+                    <li><a href="#!/dashboard">Dashboard</a></li>
+                    <li><a href="#!/dashboard">Teams</a></li>
+                    <li><a href="#!/dashboard">Reports</a></li>
+                    <li><a href="#!/dashboard">Journals</a></li>
 				</ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
